added footers in jobs and internships

--- a/applicant-server/views/job-list.ejs
+++ b/applicant-server/views/job-list.ejs
@@ -196,11 +196,10 @@
     </main>
   </body>
 
-  <footer>
-    <div class="footerbox py-4">
-      <p>&copy; 2025 Go Hire. All rights reserved.</p>
-    </div>
+  <footer class="bg-gray-900 text-center text-gray-400 py-4">
+    © <%= new Date().getFullYear() %> GoHire. All rights reserved.
   </footer>
+
 
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   <script>
