--- a/applicant-server/views/job-list.ejs
+++ b/applicant-server/views/job-list.ejs
@@ -160,7 +160,6 @@
         </div>
 
         <div class="job-listings grid grid-cols-3 gap-4">
-
           <% jobs.forEach(job => { %>
           <div class="job-card  rounded-lg shadow-sm border border-gray-200 overflow-hidden">
             <div class="job-header flex justify-between items-center p-4">
@@ -194,11 +193,8 @@
         </div>
       </div>
     </main>
+    <%- include('layout/footer') %>
   </body>
-
-  <footer class="bg-gray-900 text-center text-gray-400 py-4">
-    © <%= new Date().getFullYear() %> GoHire. All rights reserved.
-  </footer>
 
 
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
