--- a/applicant-server/views/signup.ejs
+++ b/applicant-server/views/signup.ejs
@@ -101,7 +101,7 @@
           <input type="checkbox" id="termsAgree" name="termsAgree" required>
           <label for="termsAgree">
             All your information is collected, stored and processed as per our data processing guidelines. By signing up
-            on GoHire, you agree to our <a href="/privacy-policy">Privacy Policy</a> and <a href="/terms">Terms of
+            on GoHire, you agree to our <a href="/privacy">Privacy Policy</a> and <a href="/terms">Terms of
               Use</a>
           </label>
         </div>
