--- a/applicant-server/views/job-list.ejs
+++ b/applicant-server/views/job-list.ejs
@@ -10,37 +10,56 @@
   <body class="bg-gray-100">
     <!-- Main content -->
     <header class="flex items-center justify-between py-10 border-b border-gray-200">
-        
-      <nav class="bg-gradient-to-r from-blue-700 to-blue-500 p-5 shadow-xl fixed w-full z-10 transition-all duration-300" id="navbar">
+      <nav class="bg-blue-700 min-h-[60px] p-5 shadow-xl fixed w-full z-10 text-white">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="/" class="text-black text-3xl font-bold transition-transform hover:scale-105 duration-300 ml-2">Go<span class="text-yellow-400">Hire</span></a>
-            
-            <div class="relative w-1/3 group">
-              <form action="/search" method="POST" id="search-form"><input id="search-space" type="text" name="parsedValue" placeholder="Search for Opportunities" class="w-full p-3 rounded-full border-2 border-blue-300 focus:outline-none focus:ring-2 focus:ring-yellow-400 transition-all duration-300 shadow-md placeholder:text-gray-700"></form>
-                <div class="absolute right-3 top-3.5 text-yellow-500">
-                  <a href="/search" id="search-btn"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="4">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                    </svg></a>
-                </div>
-                
+          <a href="/" class="text-3xl font-bold ml-2 transition-transform hover:scale-105 duration-300">
+            Go<span class="text-yellow-400">Hire</span>
+          </a>
+    
+          <div class="relative w-1/3">
+            <form action="/search" method="POST" id="search-form">
+              <input id="search-space" type="text" name="parsedValue" placeholder="Search for Opportunities"
+                class="w-full p-3 rounded-full border-2 border-blue-300 focus:outline-none focus:ring-2 focus:ring-yellow-400 transition-all duration-300 shadow-md placeholder:text-gray-700 text-black">
+            </form>
+            <div class="absolute right-3 top-3.5 text-yellow-500">
+              <a href="/search" id="search-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="4">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                </svg>
+              </a>
             </div>
-            
-            <ul class="hidden md:flex space-x-8 text-white">
-                <li><a href="/" class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">Home</a></li>
-                <li><a href="/jobs" class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">Jobs</a></li>
-                <li><a href="/internships" class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">Internship</a></li>
-                <li><a href="/contact" class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">Contact Us</a></li>
-            </ul>
-            
-            
-            <div class="md:hidden flex flex-col space-y-1 cursor-pointer" id="mobile-menu">
-                <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
-                <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
-                <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
-            </div>
+          </div>
+    
+          <ul class="hidden md:flex space-x-8">
+            <li>
+              <a href="/" class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">
+                Home
+              </a>
+            </li>
+            <li>
+              <a href="/jobs" class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">
+                Jobs
+              </a>
+            </li>
+            <li>
+              <a href="/internships" class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">
+                Internship
+              </a>
+            </li>
+            <li>
+              <a href="/contact" class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">
+                Contact Us
+              </a>
+            </li>
+          </ul>
+    
+          <div class="md:hidden flex flex-col space-y-1 cursor-pointer" id="mobile-menu">
+            <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
+            <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
+            <span class="block w-6 h-0.5 bg-white transition-all duration-300"></span>
+          </div>
         </div>
       </nav>
-
     </header>
 
     <main class="flex p-6 gap-6">
@@ -50,20 +69,7 @@
           <button class="text-blue-500 text-sm" onclick="clearAll()">Clear All</button>
         </div>
 
-        <div class="filter-section mb-4 border-b border-gray-200 pb-4">
-          <div class="filter-toggle flex justify-between items-center">
-            <span class="text-sm">Open to remote</span>
-            <label class="inline-flex items-center cursor-pointer">
-              <div class="relative">
-                <input type="checkbox" checked class="sr-only peer" />
-                <div class="w-10 h-5 bg-gray-200 rounded-full peer peer-checked:bg-blue-500"></div>
-                <div class="absolute left-1 top-1 w-3 h-3  rounded-full transition peer-checked:translate-x-5"></div>
-              </div>
-            </label>
-          </div>
-        </div>
-
-        <form action="/submit-jobs" method="POST" class="mx-auto max-w-md rounded-lg bg-white p-6 shadow-lg" id="filter-form">
+        <form action="/submit-jobs" method="POST" class="mx-auto max-w-md rounded-lg bg-gray-100 p-6 shadow-lg" id="filter-form">
           <!-- Salary Range Section -->
           <div class="filter-section mb-4 border-b border-gray-200 pb-4">
             <div class="filter-title mb-2 flex cursor-pointer items-center justify-between" onclick="toggleDropdownRangeSalary()">
@@ -199,18 +205,6 @@
 
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   <script>
-
-    window.addEventListener('scroll', function() {
-        const navbar = document.getElementById('navbar');
-        if (window.scrollY > 10) {
-            navbar.classList.add('py-3', 'bg-blue-700', 'shadow-2xl');
-            navbar.classList.remove('p-5');
-        } else {
-            navbar.classList.remove('py-3', 'bg-blue-700', 'shadow-2xl');
-            navbar.classList.add('p-5');
-        }
-    });
-
 
     function toggleDropdownExperience() {
       const options = document.getElementById("filterOptions");
