--- a/applicant-server/views/profile.ejs
+++ b/applicant-server/views/profile.ejs
@@ -87,14 +87,14 @@
             <div class="bg-blue-50 p-4 rounded-lg">
               <label class="block text-sm font-medium text-blue-700">First Name</label>
               <p class="text-lg text-blue-900 font-semibold">
-                Anuj
+                <%= userData.firstName %>
               </p>
             </div>
 
             <div class="bg-blue-50 p-4 rounded-lg">
               <label class="block text-sm font-medium text-blue-700">Last Name</label>
               <p class="text-lg text-blue-900 font-semibold">
-                Rathore
+                <%= userData.lastName %>
               </p>
             </div>
 
@@ -106,7 +106,7 @@
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                 </svg>
-                anujrathore385@gmail.com
+                <%= userData.email %>
               </p>
             </div>
 
@@ -118,21 +118,21 @@
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                 </svg>
-                9340041042
+                <%= userData.phone %>
               </p>
             </div>
 
             <div class="bg-blue-50 p-4 rounded-lg">
               <label class="block text-sm font-medium text-blue-700">Gender</label>
               <p class="text-lg text-blue-900 font-semibold">
-                Male
+                <%= userData.gender %>
               </p>
             </div>
 
             <div class="bg-blue-50 p-4 rounded-lg">
               <label class="block text-sm font-medium text-blue-700">Member Since</label>
               <p class="text-lg text-blue-900 font-semibold">
-                March 2025
+                <%= userData.memberSince %>
               </p>
             </div>
           </div>
@@ -221,7 +221,7 @@
 
 
       <div class="mt-8 flex justify-end space-x-4">
-        <button onclick="window.location.href = ' /'"
+        <button onclick="window.location.href = '/'"
           class="bg-gray-200 hover:bg-gray-300 text-gray-800 py-2 px-4 rounded-lg transition duration-300">Log
           Out</button>
       </div>
