--- a/applicant-server/views/competitions.ejs
+++ b/applicant-server/views/competitions.ejs
@@ -234,13 +234,13 @@
     });
 
     document.getElementById("go-to-subs1").addEventListener("click", function() {
-        window.location.href = "/Subscription";
+        window.location.href = "/payment";
     });
     document.getElementById("go-to-subs2").addEventListener("click", function() {
-        window.location.href = "/Subscription";
+        window.location.href = "/payment";
     });
     document.getElementById("go-to-subs3").addEventListener("click", function() {
-        window.location.href = "/Subscription";
+        window.location.href = "/payment";
     });
 </script>
 </body>
